--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -68,4 +68,10 @@
         android:name="com.example.android.navigation.MoreInfoFragment"
         android:label="MoreInfoFragment"
         tools:layout="@layout/fragment_more_info"/>
+    <fragment
+        android:id="@+id/rulesFragment"
+        android:name="com.example.android.navigation.RulesFragment"
+        android:label="fragment_rules"
+        tools:layout="@layout/fragment_rules" />
 </navigation>
+
