Add an item in the menu w/more info about questions

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -56,4 +56,9 @@
         android:name="com.example.android.navigation.AboutFragment"
         android:label="@string/title_about_trivia"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/moreInfoFragment"
+        android:name="com.example.android.navigation.MoreInfoFragment"
+        android:label="MoreInfoFragment"
+        tools:layout="@layout/fragment_more_info"/>
 </navigation>
