--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -3,4 +3,9 @@
     <item
         android:id="@+id/aboutFragment"
         android:title="@string/about" />
+
+    <item
+        android:id="@+id/moreInfoFragment"
+        android:title="@string/more_info" />
+
 </menu>
