--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -55,6 +55,7 @@
         android:id="@+id/aboutFragment"
         android:name="com.example.android.navigation.AboutFragment"
         android:label="@string/title_about_trivia"
+        android:layout_centerInParent="true"
         tools:layout="@layout/fragment_about" />
     <fragment
         android:id="@+id/moreInfoFragment"
