--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -51,4 +51,15 @@
             app:destination="@id/gameFragment"
             app:popUpTo="@id/titleFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.android.navigation.AboutFragment"
+        android:label="@string/title_about_trivia"
+        android:layout_centerInParent="true"
+        tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/moreInfoFragment"
+        android:name="com.example.android.navigation.MoreInfoFragment"
+        android:label="MoreInfoFragment"
+        tools:layout="@layout/fragment_more_info"/>
 </navigation>
